<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <!-- CONTACT -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et__contact_name"
            android:text="@string/contact_name"/>

        <EditText
            android:id="@+id/et__contact_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <Button
            android:id="@+id/btn__contact_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_add"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn__contact_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_read"/>

    <!-- CALL LOG-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/call_info"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et__call_number"
            android:text="@string/call_number"/>

        <EditText
            android:id="@+id/et__call_number"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"/>

        <Button
            android:id="@+id/btn__call_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_add"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn__call_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_read"/>

    <!-- RESET SETTINGS-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/reset_settings_info"/>

</LinearLayout>
